--- a/views/partials/viewNotesModal.handlebars
+++ b/views/partials/viewNotesModal.handlebars
@@ -12,7 +12,7 @@
 			<div class="modal-body">
 				{{#if this.notes}}
 					{{#each this.notes}}
-						<div class="card" data-note-card="{{this.id}}">
+						<div class="card mb-4" data-note-card="{{this.id}}">
 							<div class="card-body">
 								<h5 class="card-title">{{this.title}}</h5>
 								<p class="card-text">{{this.body}}</p>
